--- a/_config.yml
+++ b/_config.yml
@@ -1,40 +1,43 @@
 # Site
-title: Halve
-description: Stylish, Two-Column Jekyll Theme
-url: https://taylantatli.github.io/Halve
-logo: halve.png                                       # Site logo
+title: Allen Yeung
+description: Allen Yeung`s blog.
+url:
+logo: halve.png
 locale: en_US
 
 # Left Block Images
 background:
-  homepage: images/home.png                           # this image will be shown on homepage's left block
-  post-list: images/unsplash-image-10.jpg             # this image will be shown on post list page
-  default-post: images/unsplash-gallery-image-3.jpg   # this image will be shown when post's front matter doesn't specify any image
+  # this image will be shown on homepage's left block
+  homepage: images/home.png
+  # this image will be shown on post list page
+  post-list: images/unsplash-image-10.jpg
+  # this image will be shown when post's front matter doesn't specify any image
+  default-post: images/unsplash-gallery-image-3.jpg
 
 # Jekyll
-permalink:          /:title/
-markdown:           kramdown
-highlighter:        rouge
+permalink: /:title/
+markdown: kramdown
+highlighter: rouge
 kramdown:
-  auto_ids:         true
-  footnote_nr:      1
-  entity_output:    as_char
-  toc_levels:       1..6
-  enable_coderay:   false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  enable_coderay: false
 sass:
-  sass_dir:         assets/_sass
-  style:            compressed
+  sass_dir: assets/_sass
+  style: compressed
 
 # Google Analytics
 #google-analytics: UA-XXXXX-Y
 
 # Social Links
-#email:             email
+email: designerallen@163.com
 #google.plus:        username
-twitter:            username
-#facebook:           username
-github:             username
-stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
+#twitter:
+#facebook:
+github: allenyeung
+#stackoverflow:
 #linkedin:          username
 #xing:              username
 #instagram:          username
@@ -46,13 +49,13 @@ stackoverflow:     123456/username   from a "http://stackoverflow.com/users/1234
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
-#weibo:             username
+weibo: 2185334310
 #flickr:            username
 #codepen:           username
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
-behance:           username
+behance:
 
 # Gems
 gems:
