update weibo id

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ github: allenyeung
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
-weibo: 2185334310
+weibo: u/2185334310
 #flickr:            username
 #codepen:           username
 #keybase:           username
